k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:  
  selector:
    app: conversao-peso
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
